@@ -7,7 +7,6 @@ import java.util.Map;
 import java.util.ServiceLoader;
 
 import org.apache.log4j.Logger;
-import org.cesecore.certificates.ca.ssh.SshCa;
 import org.cesecore.certificates.ca.ssh.SshCaInfo;
 
 
@@ -46,8 +45,8 @@ public enum CAFactory {
             final String caimpl = "org.cesecore.certificates.ca.X509CAImpl";
             try {
                 Class<?> clazz = Class.forName(caimpl);
-                caImplMap.put("X509CA", (CACommon)clazz.newInstance());
-            } catch (IllegalAccessException | ClassNotFoundException | InstantiationException e) {
+                caImplMap.put("X509CA", (CACommon) clazz.getDeclaredConstructor().newInstance());
+            } catch (IllegalAccessException | ClassNotFoundException | InstantiationException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
                 Logger.getLogger(CAFactory.class).info("Could not construct org.cesecore.certificates.ca.X509CAImpl implementation for developers: ", e);
             }
             // If no CA implementations were found, log error
