@@ -12,16 +12,18 @@
  *************************************************************************/
 package org.cesecore.keys.token;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
 
 import com.google.common.base.Preconditions;
+import com.keyfactor.util.keys.token.CryptoToken;
+import com.keyfactor.util.keys.token.pkcs11.NoSuchSlotException;
 
 import org.apache.log4j.Logger;
 import org.cesecore.internal.InternalResources;
-import org.cesecore.keys.token.p11.exception.NoSuchSlotException;
 
 
 /**
@@ -32,6 +34,7 @@ import org.cesecore.keys.token.p11.exception.NoSuchSlotException;
  */
 public class CryptoTokenFactory {
 	
+
     private static transient Logger log = Logger.getLogger(CryptoTokenFactory.class);
     
     // Used for references where EE version may not be available
@@ -41,6 +44,9 @@ public class CryptoTokenFactory {
     public static final String PRIME_CA_TOKEN_NAME = "se.primeKey.caToken.card.PrimeCAToken";
     public static final String AWSKMS_SIMPLE_NAME = "AWSKMSCryptoToken";
     public static final String AWSKMS_NAME = "org.ejbca.keys.token.AWSKMSCryptoToken";
+    public static final String FORTANIX_NAME = "org.ejbca.keys.token.FortanixCryptoToken";
+    public static final String FORTANIX_SIMPLE_NAME = "FortanixCryptoToken";
+
 
     /** Registry of available hard ca token classes that can be instantiated. */
     private Map<String, AvailableCryptoToken> availabletokens = new HashMap<>(4);
@@ -61,6 +67,8 @@ public class CryptoTokenFactory {
             instance.addAvailableCryptoToken(SoftCryptoToken.class.getName(), "SOFT", true, true);
             instance.addAvailableCryptoToken(NullCryptoToken.class.getName(), "Null", false, false);
             instance.addAvailableCryptoToken(AzureCryptoToken.class.getName(), "Azure Key Vault", false, true);
+            // Enterprise only. May not be available don't reference class.
+            instance.addAvailableCryptoToken(FORTANIX_NAME, "Fortanix DSM", false, true);
             // Enterprise only. May not be available don't reference class.
             instance.addAvailableCryptoToken(AWSKMS_NAME, "AWS KMS", false, true);
             // Enterprise only. May not be available don't reference class.
@@ -134,18 +142,18 @@ public class CryptoTokenFactory {
      */
     private boolean loadClass(final String classname){
         try {           
-        	Thread.currentThread().getContextClassLoader().loadClass(classname).newInstance();       
+        	Thread.currentThread().getContextClassLoader().loadClass(classname).getDeclaredConstructor().newInstance();       
             return true;
         } catch (ClassNotFoundException e) {
             log.info(InternalResources.getInstance().getLocalizedMessage("token.classnotfound", classname)); 
-        } catch (InstantiationException e) {
+        } catch (InstantiationException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             log.info(InternalResources.getInstance().getLocalizedMessage("token.errorinstansiate", classname, e.getMessage()));
         } catch (IllegalAccessException e) {
             log.error("IllegalAccessException: "+classname, e);
         } catch (NoClassDefFoundError e) {
             // This happens more rarely and should be flagged as an error
             log.error("NoClassDefFoundError: "+classname, e);
-        }
+        } 
         return false;
     }
     
@@ -252,7 +260,7 @@ public class CryptoTokenFactory {
     private static final CryptoToken createTokenFromClass(final String classpath) {
     	try {
     		Class<?> implClass = Class.forName(classpath);
-    		Object obj = implClass.newInstance();
+    		Object obj = implClass.getDeclaredConstructor().newInstance();
     		return (CryptoToken) obj;
     	} catch (Throwable e) {
     		log.error("Error contructing Crypto Token (setting to null). Classpath="+classpath, e);
