@@ -80,6 +80,7 @@ import javax.ejb.TimerService;
 import javax.ejb.TransactionAttribute;
 import javax.ejb.TransactionAttributeType;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
@@ -190,6 +191,10 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
     @EJB
     private RevocationSessionLocal revocationSession;
 
+
+    /** Maps timer IDs to next run timestamp. Used to prevent repeated scheduling of the same timer. */
+    private Map<Integer,Long> reservedTimers = new HashMap<>();
+
     @PostConstruct
     public void ejbCreate() {
         timerService = sessionContext.getTimerService();
@@ -215,7 +220,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
         boolean success = addServiceInternal(admin, id, name, serviceConfiguration);
         if (success) {
             final String msg = intres.getLocalizedMessage("services.serviceadded", name);
-            final Map<String, Object> details = new LinkedHashMap<String, Object>();
+            final Map<String, Object> details = new LinkedHashMap<>();
             details.put("msg", msg);
             auditSession.log(EjbcaEventTypes.SERVICE_ADD, EventStatus.SUCCESS, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
                     admin.toString(), null, null, null, details);
@@ -260,7 +265,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
             if (isAuthorizedToEditService(admin)) {
                 addServiceInternal(admin, findFreeServiceId(), newname, servicedata);
                 final String msg = intres.getLocalizedMessage("services.servicecloned", newname, oldname);
-                final Map<String, Object> details = new LinkedHashMap<String, Object>();
+                final Map<String, Object> details = new LinkedHashMap<>();
                 details.put("msg", msg);
                 auditSession.log(EjbcaEventTypes.SERVICE_ADD, EventStatus.SUCCESS, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
                         admin.toString(), null, null, null, details);
@@ -295,7 +300,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
                 }
                 serviceDataSession.removeServiceData(htp.getId());
                 final String msg = intres.getLocalizedMessage("services.serviceremoved", name);
-                final Map<String, Object> details = new LinkedHashMap<String, Object>();
+                final Map<String, Object> details = new LinkedHashMap<>();
                 details.put("msg", msg);
                 auditSession.log(EjbcaEventTypes.SERVICE_REMOVE, EventStatus.SUCCESS, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
                         admin.toString(), null, null, null, details);
@@ -306,7 +311,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
             }
         } catch (Exception e) {
             final String msg = intres.getLocalizedMessage("services.errorremovingservice", name);
-            final Map<String, Object> details = new LinkedHashMap<String, Object>();
+            final Map<String, Object> details = new LinkedHashMap<>();
             details.put("msg", msg);
             details.put("error", e.getMessage());
             auditSession.log(EjbcaEventTypes.SERVICE_REMOVE, EventStatus.FAILURE, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
@@ -336,7 +341,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
         }
         if (success) {
             final String msg = intres.getLocalizedMessage("services.servicerenamed", oldname, newname);
-            final Map<String, Object> details = new LinkedHashMap<String, Object>();
+            final Map<String, Object> details = new LinkedHashMap<>();
             details.put("msg", msg);
             auditSession.log(EjbcaEventTypes.SERVICE_RENAME, EventStatus.SUCCESS, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
                     admin.toString(), null, null, null, details);
@@ -350,7 +355,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
 
     @Override
     public Collection<Integer> getVisibleServiceIds() {
-        Collection<Integer> allVisibleServiceIds = new ArrayList<Integer>();
+        Collection<Integer> allVisibleServiceIds = new ArrayList<>();
             Collection<Integer> allServiceIds = getServiceIdToNameMap().keySet();
             for (int id : allServiceIds) {
                 // Remove hidden services here..
@@ -493,7 +498,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
                 // Reschedule timer
                 IWorker worker = null;
                 if (serviceInterval != IInterval.DONT_EXECUTE) {
-                    Timer nextTrigger = addTimer(serviceInterval * 1000, timerInfo);
+                    Timer nextTrigger = addTimer(serviceInterval * 1000, timerInfo, true);
                     try {
                         // Try to acquire lock / see if this node should run
                         worker = serviceSession.getWorkerIfItShouldRun(timerInfo, nextTrigger.getNextTimeout().getTime());
@@ -557,7 +562,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
     @TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
     @Override
     public boolean canWorkerRun(final IWorker worker) {
-        Map<Class<?>, Object> ejbs = new HashMap<Class<?>, Object>();
+        Map<Class<?>, Object> ejbs = new HashMap<>();
         ejbs.put(ApprovalSessionLocal.class, approvalSession);
         ejbs.put(ApprovalProfileSessionLocal.class, approvalProfileSession);
         ejbs.put(EndEntityAuthenticationSessionLocal.class, authenticationSession);
@@ -721,7 +726,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
         try {
             // Awkward way of letting POJOs get interfaces, but shows dependencies on the EJB level for all used classes. Injection wont work, since
             // we have circular dependencies!
-            Map<Class<?>, Object> ejbs = new HashMap<Class<?>, Object>();
+            Map<Class<?>, Object> ejbs = new HashMap<>();
             ejbs.put(ApprovalSessionLocal.class, approvalSession);
             ejbs.put(ApprovalProfileSessionLocal.class, approvalProfileSession);
             ejbs.put(EndEntityAuthenticationSessionLocal.class, authenticationSession);
@@ -778,7 +783,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
                     if (noLogging) {
                         log.info(msg);
                     } else {
-                        final Map<String, Object> details = new LinkedHashMap<String, Object>();
+                        final Map<String, Object> details = new LinkedHashMap<>();
                         details.put("msg", msg);
                         for (Map.Entry<Object, Object> entry : diff.entrySet()) {
                             details.put(entry.getKey().toString(), entry.getValue().toString());
@@ -791,7 +796,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
                     if (noLogging) {
                         log.error(msg);
                     } else {
-                        final Map<String, Object> details = new LinkedHashMap<String, Object>();
+                        final Map<String, Object> details = new LinkedHashMap<>();
                         details.put("msg", msg);
                         auditSession.log(EjbcaEventTypes.SERVICE_EDIT, EventStatus.FAILURE, EjbcaModuleTypes.SERVICE, EjbcaServiceTypes.EJBCA,
                                 admin.toString(), null, null, null, details);
@@ -814,7 +819,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
         // Get all services
         Collection<Timer> currentTimers = timerService.getTimers();
         Iterator<Timer> iter = currentTimers.iterator();
-        HashSet<Serializable> existingTimers = new HashSet<Serializable>();
+        HashSet<Serializable> existingTimers = new HashSet<>();
         while (iter.hasNext()) {
             Timer timer = iter.next();
             try {
@@ -841,7 +846,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
     @TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
     @Override
     public Map<Integer, Long> getNewServiceTimeouts(HashSet<Serializable> existingTimers) {
-        Map<Integer, Long> ret = new HashMap<Integer, Long>();
+        Map<Integer, Long> ret = new HashMap<>();
         HashMap<Integer, String> idToNameMap = getServiceIdToNameMap();
         Collection<Integer> allServices = idToNameMap.keySet();
         Iterator<Integer> iter2 = allServices.iterator();
@@ -891,11 +896,31 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
      */
     // We don't want the appserver to persist/update the timer in the same transaction if they are stored in different non XA DataSources. This method
     // should not be run from within a transaction.
-    private Timer addTimer(long interval, Integer id) {
+    private Timer addTimer(long interval, Integer id, boolean force) {
         if (log.isDebugEnabled()) {
             log.debug("addTimer: " + id);
-        } 
-        return timerService.createSingleActionTimer(interval, new TimerConfig(id, false));
+        }
+        final boolean readyToRun = reserveTimerInterval(interval, id);
+        if (readyToRun || force) {
+            return timerService.createSingleActionTimer(interval, new TimerConfig(id, false));
+        } else {
+            return null;
+        }
+    }
+
+    private void addTimer(long interval, Integer id) {
+        addTimer(interval, id, false);
+    }
+
+    private synchronized boolean reserveTimerInterval(final long interval, final Integer timerId) {
+        final long wantedTimeout = System.currentTimeMillis() + interval;
+        final Long existingTimeout = reservedTimers.get(timerId);
+        if (existingTimeout != null && existingTimeout >= wantedTimeout) {
+            return false;
+        } else {
+            reservedTimers.put(timerId, wantedTimeout);
+            return true;
+        }
     }
 
     /**
@@ -944,12 +969,12 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
         try {
             String clazz = serviceConfiguration.getWorkerClassPath();
             if (StringUtils.isNotEmpty(clazz)) {
-                worker = (IWorker) Thread.currentThread().getContextClassLoader().loadClass(clazz).newInstance();
+                worker = (IWorker) Thread.currentThread().getContextClassLoader().loadClass(clazz).getDeclaredConstructor().newInstance();
                 worker.init(intAdmin, serviceConfiguration, serviceName, runTimeStamp, nextRunTimeStamp);
             } else {
                 log.info("Worker has empty classpath for service " + serviceName);
             }
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             // Only display a real error if it is a worker that we are actually
             // using
             if (serviceConfiguration.isActive()) {
@@ -1017,7 +1042,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
     @TransactionAttribute(TransactionAttributeType.SUPPORTS)
     @Override
     public HashMap<Integer, String> getServiceIdToNameMap() {
-        HashMap<Integer, String> returnval = new HashMap<Integer, String>();
+        HashMap<Integer, String> returnval = new HashMap<>();
         Collection<ServiceData> result = serviceDataSession.findAll();
         for(ServiceData next : result) {
             returnval.put(next.getId(), next.getName());
@@ -1028,7 +1053,7 @@ public class ServiceSessionBean implements ServiceSessionLocal, ServiceSessionRe
     @TransactionAttribute(TransactionAttributeType.SUPPORTS)
     @Override
     public List<String> getServicesUsingCertificateProfile(Integer certificateProfileId) {
-        List<String> result = new ArrayList<String>();
+        List<String> result = new ArrayList<>();
         //Since the service types are embedded in the data objects there is no more elegant way to to this.
         List<ServiceData> allServices = serviceDataSession.findAll();
         for (ServiceData service : allServices) {
